--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-and-time": "^0.10.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "perf_hooks": "0.0.1"
   }
 }
