--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.17.0",
     "express-socket.io-session": "^1.3.5",
     "fs": "0.0.1-security",
+    "multiparty": "^4.2.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
